--- a/Knuckles/Knuckles/Knuckles.csproj
+++ b/Knuckles/Knuckles/Knuckles.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{520A145C-850B-4971-967C-CC82ECFB3B6E}</ProjectGuid>
+    <ProjectGuid>{DDEE3042-1D85-4DA6-BCC0-5E38C91CB31F}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Game</RootNamespace>
-    <AssemblyName>Game</AssemblyName>
+    <RootNamespace>Knuckles</RootNamespace>
+    <AssemblyName>Knuckles</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
